--- a/src/App.css
+++ b/src/App.css
@@ -139,7 +139,7 @@
   margin-top: 16px;
   display: flex;
   width: fit-content;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .container-pagination{
@@ -190,6 +190,14 @@
   color: #292b2c;
   font-family: Poppins;
   text-decoration: none;
+}
+
+.search-keyword {
+  margin-left: 8px;
+  padding-left: 8px;
+  color: #292b2c;
+  font-size: medium;
+  outline: none;
 }
 
 
